# ReTap

./: .gitignore  ARCHIV_conda_requirements.txt  LICENSE  README.md  add_env_pip_packages.bat  conda_requirements.txt  create_conda_env.bat  pyproject.toml  retap_env.yml  setup.py
data/settings/: configs.json  configs_template.json
src/retap/feature_extraction/: extract_features.py  feat_extraction_classes.py  feature_post_processing.py  kinematic_features.py  run_feat_extract.py  tapping_extract_features.py  tapping_time_detect.py
src/retap/main_scripts/: __init__.py  run_retap.ipynb  run_retap.py  run_retap_notebook.py
src/retap/prediction/: predict_score.py
src/retap/preprocessing/: finding_blocks.py  finding_impacts.py  process_raw_acc.py  single_block_preprocessing.py
src/retap/utils/: data_management.py  tmsi_poly5reader.py
