[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retap"
version = "0.1.0"
description = 'ReTap is an open-source tool to generate automated UPDRS finger-tapping predictions based on index-finger accelerometer data'
readme = "README.md"
requires-python = ">3.9"
license = {file = "LICENSE.txt"}
keywords = ["finger-tapping", "UPDRS", "Parkinsons disease ", "bradykinesia"]
authors = [
  {email = "jgvhabets@gmail.com"},
  {name = "Jeroen Habets"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Intended Audience :: Neurological, Movement Disorders, Researchers",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
homepage = "https://github.com/jgvhabets/ReTap"
repository = "https://github.com/jgvhabets/ReTap"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]